src/css/input.css
/* ... */
#connect,
.social,
#links,
#about-us {
  flex: 1;
  min-width: 300px;
}

/* Connect Section */
#connect {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  min-height: 100%;
  line-height: 2;
}

#connect a {
  display: flex;
  align-items: center;
  justify-content: center;
}

#connect ion-icon {
  font-size: 1.8rem;
  margin-right: 6px;
}

#connect a:hover,
#links a:hover {
  text-decoration: underline;
}

/* Social Section */
.social {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 4rem;
}

.social ion-icon {
  font-size: 60px;
  padding: 5px;
  border-radius: 30%;
  margin: 0 3px;
  background-color: hsl(0, 0%, 36%);
}

ion-icon:hover {
  transition: 0.4s ease all;
}

/* Links Section */
#links {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  line-height: 2;
  color: black;
}

/* About Us Section */
#about-us {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#about-us p {
  font-size: 16px;
  margin: 0 40px;
}

/* Social Media Icon Hover Effects */
ion-icon[name="logo-facebook"]:hover {
  color: #1877f2;
  background-color: hsl(216, 3%, 18%);
}

ion-icon[name="logo-tiktok"]:hover {
  color: rgb(255, 255, 255);
  background-color: #000000;
  border-radius: 20px;
}

ion-icon[name="logo-instagram"]:hover {
  color: white;
  background: linear-gradient(
    45deg,
    #f09433 0%,
    #e6683c 25%,
    #dc2743 50%,
    #cc2366 75%,
    #bc1888 100%
  );
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f09433', endColorstr='#bc1888', GradientType=1);
}

/* index.html */
#landing-page {
  position: relative;
  visibility: hidden;
  opacity: 0;
}

#landing-page ion-icon {
  font-size: 1.5rem;
  color: #13df00;
}

.height-calc {
  height: calc(100dvh - 88px);
}

.my-carousel {
  width: 70%;
  position: relative;
  height: 40vh;
  overflow: hidden;
  border: 2px solid transparent; /* Transparent border for gradient effect */
  border-image: linear-gradient(45deg, rgb(0, 0, 0), #e6e6e6) 1; /* Gradient border */
  box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.2);
}

.my-carousel img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}

.my-slide {
  width: 100%;
  opacity: 0;
  transition: opacity 2s ease-in-out;
  position: absolute;
  top: 0;
  left: 0;
}

.my-slide.my-active {
  opacity: 1;
}

#landing-page ul {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  font-size: 20px;
  width: 80%;
  padding: 20px;
}

#landing-page ul li {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: flex-end;
}

ul ion-icon {
  font-size: 1.5rem;
  color: hsl(0, 0%, 23%);
  margin: 0 5px;
  border-radius: 50%;
}

#why-us {
  width: 100%;
  height: fit-content;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.why-us-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: relative;
  padding: 60px;
  width: 60vw;
  margin: 40px auto;
  height: 100%;
  border-radius: 12px;
  border: 2px double rgb(0, 0, 0);
  box-shadow: 10px 0 20px 0 rgba(0, 0, 0, 0.4);
  color: rgb(255, 255, 255);
}

.why-logo {
  width: 18%;
  z-index: 20;
}

.why-us-img {
  width: 100%;
  height: 100%;
  position: absolute;
  object-fit: cover;
  z-index: 1;
  border-radius: 10px;
  opacity: 0;
  transition: opacity 2s ease-in-out;
}

.why-us-container img.active {
  opacity: 1;
}

#why-us h2 {
  font-size: 4vw;
  z-index: 3;
  font-weight: 600;
  color: white;
}

#why-us p {
  width: 70%;
  font-size: 1.3rem;
}

#why-us a {
  z-index: 4;
  position: relative;
  width: 300px;
  display: flex;
  justify-content: center;
  align-items: center;
}

#why-us ion-icon {
  font-size: 1.5rem;
  color: white;
  padding-left: 5px;
}

.why-us-container::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  border-radius: 10px;
  background-color: rgba(0, 0, 0, 0.6);
  z-index: 2;
}

#services .card{
  min-width: 280px;
}

ul.dropdown-menu {
  background-color: hsla(0, 0%, 100%, 0.7);
}

.container-fluid {
  z-index: 4;
}

#contact-us,
#contact-us h3,
#contact-us a {
  z-index: 4;
}

#view-gallery {
  padding: 0px 0px 20px;
}

#view-gallery a {
  z-index: 4;
  color: rgb(235, 184, 45);
}

.row {
  z-index: 4;
}

.col-md-6 {
  z-index: 4;
}

.container-fluid.services {
  width: 100%;
}

#services .card {
  border-radius: 5px;
  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
  border: 1px solid rgb(0, 0, 0, 1);
  height: fit-content;
  background-color: white;
}

#services .card {
  background: linear-gradient(
    90deg,
    rgba(247, 248, 255, 0.866),
    rgba(218, 232, 255, 0.831)
  );
}

#services hr {
  width: 100%;
  border: 1px solid rgb(0, 0, 0);
  opacity: 0.6;
  margin: 10px 0px;
}

#services img {
  width: 100%;
  height: 280px;
  object-fit: cover;
}

#services a {
  color: black;
}

#services p {
  font-size: 16px;
}

#services li {
  list-style: inside;
  list-style-type: square;
}

.card-img-top {
  transition: filter 0.3s ease;
}

.card a:hover .card-img-top {
  filter: brightness(50%);
}

#gallery-container {
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
}

.gallery h2 {
  font-size: 2em;
  font-weight: 600;
  color: #000000;
}

.gallery {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 10px;
}

.gallery img {
  width: 28%;
  height: 320px;
  object-fit: cover;
  object-position: center;
}

#entire-gallery img {
  opacity: 0;
  transform: translateY(20px);
  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
}

#entire-gallery img.fade-in {
  opacity: 1;
  transform: translateY(0);
}

#gallery-container img {
  opacity: 0;
  transform: translateY(20px);
  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
}
/* ... */

